--- a/AfroditaNuvies/bin/AndroidManifest.xml
+++ b/AfroditaNuvies/bin/AndroidManifest.xml
@@ -8,6 +8,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="18" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -21,6 +23,18 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="net.infobosccoma.projecte.afroditanuvies.LlistarTemporades"
+            android:label="@string/title_activity_llistar_temporades" >
+        </activity>
+        <activity
+            android:name="net.infobosccoma.projecte.afroditanuvies.LlistaColeccionsActivity"
+            android:label="@string/title_activity_llista_coleccions" >
+        </activity>
+        <activity
+            android:name="net.infobosccoma.projecte.afroditanuvies.MostrarColeccioActivity"
+            android:label="@string/title_activity_mostrar_coleccio" >
         </activity>
     </application>
 
